2009-06-19  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h (scheme): Added Thread for Windows (not working).

2009-06-18  higepon  <higepon@users.sourceforge.jp>

        * TextualOutputPort.cpp : Uses FlonumUtil::flonumToUcs4String for display/write.

        * UtilityProcedures.cpp : Uses FlonumUtil::flonumToUcs4String for number->string.

        * Arithmetic.h : Added FlonumUtil for reading/writing flonum.

2009-06-17  higepon  <higepon@users.sourceforge.jp>

        * ListProcedures.cpp : Added vector-set!, vector-ref, vector-length and make-vector. Thanks to mrc.mgg.

2009-06-16  higepon  <higepon@users.sourceforge.jp>

        * Arithmetic.cpp (numberToString): Fixed number->string +nan.0, +inf.0 and -inf.0 . Thanks to mrc.mgg.

2009-06-15  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Writing Thread library for Windows, not completed.

        * tools/psyntax-r6rs/rev10_to_10/psyntax/main.ss: Fixed load-library-path. Thanks to mrc.mgg.

        * VM-inl.h: Added #include pointed out by mrc.mgg.

        * OSCompatThread.h : Fixed condition-variable-wait!. Thanks to Shiro Kawai for pointing out the bug.

2009-06-12  higepon  <higepon@users.sourceforge.jp>

        * lib/mosh/concurrent.ss: Added document.

2009-06-11  higepon  <higepon@users.sourceforge.jp>

        * Added one argument to spawn.

2009-06-10  higepon  <higepon@users.sourceforge.jp>

        * OSCompatThread.h : Conditional variables waitWithTimeout works.

2009-06-09  higepon  <higepon@users.sourceforge.jp>

        * test/concurrent-crash.ss : Added.

2009-06-05  higepon  <higepon@users.sourceforge.jp>

        * test/concurrent.ss : Added.

2009-06-03  higepon  <higepon@users.sourceforge.jp>

        * compiler.scm (pass3/$call): Fixed Issue 63.

        * Rewrote whole (mosh test) for performance reason.

        * Retry Issue 59.

        * Changed fasl file extension from *.fasl to *.mosh-fasl.

        * Makefile.am : Fixed the Issue 59.
