@@ -1,3 +1,8 @@
+2009-06-22  higepon  <higepon@users.sourceforge.jp>
+
+        * Added createDirectory, deleteFileOrDirectory, isDirectory, renameFile, isExecutable, isRegular, isSymbolicLink
+                createSymbolicLink.
+
 2009-06-19  higepon  <higepon@users.sourceforge.jp>
 
         * OSCompatThread.h (scheme): Added Thread for Windows (not working).
